--- a/index.html
+++ b/index.html
@@ -252,6 +252,25 @@
       </div>
     </div>
     <!--/ Concurrent Work. -->
+
+    <!-- Concurrent Work. -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Out-of-Domain Face Swapping Results</h2>
+        <img src="./static/images/sampling_ood.jpg"
+             class="training-image"
+             alt="training image."/>
+
+        <div class="content has-text-justified">
+          <p>
+            We provide additional collections of swapped-image samples based on our DiffFace model.
+            Although our model is not trained on any of these oil portrait paintings, the results reflects the characteristics of each domain with shape changing.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Concurrent Work. -->
+
   </div>
 </section>
 
