--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <span class="author-block">
               <a href="https://hxngiee.github.io">Kihong Kim</a><sup>1</sup>,</span>
             <span class="author-block">
-              Yunho Kim</a><sup>1</sup>,</span>
+              <a href="https://yunho0421.vercel.app/about">Yunho Kim</a><sup>1</sup>,</span>
             <span class="author-block">
               <a href="https://seokju-cho.github.io">Seokju Cho</a><sup>2</sup>,
             </span>
